--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,7 @@
 {
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
   },
-  "ecmaFeatures": {
-    "modules": true
-  },
-  "rules": {
-   "indent": [2, 2],
-   "brace-style": [2, "1tbs"],
-   "quotes": [2, "single"],
-   "no-console": 1,
-   "no-use-before-define": [2, "nofunc"],
-   "no-underscore-dangle": 0,
-   "no-constant-condition": 0,
-   "space-before-function-paren":[2, {"anonymous": "always", "named": "never"}],
-   "func-style": [2, "declaration"]
-  }
+  "extends": "eslint:recommended"
 }
