--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js:
-  - "0.12"
   - "4"
   - "6"
   - "8"
 script:
-  - "npm run test-coverage"
-after_script:
-  - "npm install coveralls@2 && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+  - "npm run lint"
+  - "npm run test-with-coverage"
+after_success:
+  - "npm run coveralls"
 sudo: false
