--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "commander": "^2.8.1",
     "debug": "^3.1.0",
     "flat": "^4.0.0",
+    "jsonparse": "^1.3.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.flatten": "^4.4.0",
     "lodash.get": "^4.4.0",
