--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "cli-table": "^0.3.1",
+    "cli-table2": "^0.2.0",
     "commander": "^2.8.1",
     "flat": "^4.0.0",
     "jsonparse": "^1.3.1",
