--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "json2csv",
   "preferGlobal": "true",
-  "version": "3.11.5",
+  "version": "4.0.0-alpha.0",
   "description": "Convert JSON to CSV",
   "keywords": [
     "json",
